--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Liên hệ với COFFEE GIBOR SHOP</title>
 
-    <!-- THEME CHÍNH -->
+    <!-- THEME CHÍNH DÙNG CHUNG-->
     <link rel="stylesheet" href="css/style.css" />
+
+    <!-- FRONT DÙNG CHUNG -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:ital,wght@0,700;1,700&family=Mrs+Saint+Delafield&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
 
     <!-- THEM CONTACT -->
     <link rel="stylesheet" href="css/contact.css" />
   </head>
   <body>
+    <!-- HEADER DÙNG CHUNG -->
     <header class="header">
       <div class="header-container">
         <!-- LOGO -->
@@ -41,8 +52,11 @@
         <!-- AUTH + CART -->
         <div class="header-actions">
           <a href="login.html" class="icon-btn">Đăng nhập</a>
-          <a href="cart.html" class="icon-btn cart">🛒</a>
-          <button class="theme-toggle" id="themeToggle">🌙</button>
+          <a href="cart.html" class="icon-btn cart">
+            🛒
+            <span>Giỏ hàng</span>
+            <span>0</span>
+          </a>
         </div>
       </div>
     </header>
@@ -85,7 +99,6 @@
               <div class="social-links">
                 <a href="#">Facebook</a>
                 <a href="#">TikTok</a>
-                <a href="#">Instagram</a>
               </div>
             </div>
           </div>
