thêm phần thanh toán của Dương Bảo và 1 số chỉnh sửa của Gibor

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Giới thiệu về COFFEE GIBOR SHOP</title>
+    <title>Giới thiệu về GIBOR COFFEE</title>
 
     <!-- THEME CHÍNH DÙNG CHUNG-->
     <link rel="stylesheet" href="css/style.css" />
@@ -37,7 +37,7 @@
         <!-- LOGO -->
         <a href="index.html" class="logo">
           <img src="images/logo.jpg" alt="GIBOR Coffee" />
-          <span>GIBOR COFFEE SHOP</span>
+          <span>GIBOR COFFEE</span>
         </a>
 
         <!-- NAV -->
@@ -45,6 +45,7 @@
           <ul class="nav-links">
             <li><a href="index.html">Trang chủ</a></li>
             <li><a href="menu.html">Menu</a></li>
+            <li><a href="about.html">Giới thiệu</a></li>
             <li><a href="contact.html">Liên hệ</a></li>
           </ul>
         </nav>
@@ -57,6 +58,8 @@
             <span>Giỏ hàng</span>
             <span>0</span>
           </a>
+          <button class="menu-toggle" id="menuToggle" aria-label="Menu">
+            <i class="fas fa-bars"></i>
         </div>
       </div>
     </header>
@@ -189,9 +192,9 @@
         <div class="footer-col">
           <h4>Khám Phá</h4>
           <ul>
-            <li><a href="about.html">Giới thiệu</a></li>
             <li><a href="index.html">Trang chủ</a></li>
             <li><a href="menu.html">Menu</a></li>
+            <li><a href="about.html">Giới thiệu</a></li>
             <li><a href="contact.html">Liên hệ</a></li>
           </ul>
         </div>
