--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu Coffee Gibor</title>
+    <title>Menu GIBOR COFFEE</title>
+
     <!-- THEME CHÍNH DÙNG CHUNG-->
     <link rel="stylesheet" href="css/style.css" />
 
@@ -27,21 +28,26 @@
   </head>
 
   <body>
+    <!-- HEADER DÙNG CHUNG -->
     <header class="header">
       <div class="header-container">
+        <!-- LOGO -->
         <a href="index.html" class="logo">
           <img src="images/logo.jpg" alt="GIBOR Coffee" />
-          <span>GIBOR COFFEE SHOP</span>
+          <span>GIBOR COFFEE</span>
         </a>
 
+        <!-- NAV -->
         <nav class="nav">
           <ul class="nav-links">
             <li><a href="index.html">Trang chủ</a></li>
             <li><a href="menu.html">Menu</a></li>
+            <li><a href="about.html">Giới thiệu</a></li>
             <li><a href="contact.html">Liên hệ</a></li>
           </ul>
         </nav>
 
+        <!-- AUTH + CART -->
         <div class="header-actions">
           <a href="login.html" class="icon-btn">Đăng nhập</a>
           <a href="cart.html" class="icon-btn cart">
@@ -50,6 +56,8 @@
             <span>0</span>
           </a>
           <button class="theme-toggle" id="themeToggle">🌙</button>
+          <button class="menu-toggle" id="menuToggle" aria-label="Menu">
+            <i class="fas fa-bars"></i>
         </div>
       </div>
     </header>
@@ -379,9 +387,9 @@
         <div class="footer-col">
           <h4>Khám Phá</h4>
           <ul>
-            <li><a href="about.html">Giới thiệu</a></li>
             <li><a href="index.html">Trang chủ</a></li>
             <li><a href="menu.html">Menu</a></li>
+            <li><a href="about.html">Giới thiệu</a></li>
             <li><a href="contact.html">Liên hệ</a></li>
           </ul>
         </div>
