chỉnh sửa theme dark bởi gibor

--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,7 @@
             <span>Giỏ hàng</span>
             <span>0</span>
           </a>
+          <button class="theme-toggle" id="themeToggle">🌙</button>
           <button class="menu-toggle" id="menuToggle" aria-label="Menu">
             <i class="fas fa-bars"></i>
         </div>
