--- a/cart.html
+++ b/cart.html
@@ -36,7 +36,7 @@
       <div class="header-container">
         <!-- LOGO -->
         <a href="index.html" class="logo">
-          <img src="images/logo.jpg" alt="GIBOR Coffee" />
+          <img src="images/logo/logo.jpg" alt="GIBOR Coffee" />
           <span>GIBOR COFFEE</span>
         </a>
 
@@ -52,7 +52,7 @@
 
         <!-- AUTH + CART -->
         <div class="header-actions">
-          <a href="login.html" class="icon-btn">Đăng nhập</a>
+          <a href="login.html" class="icon-btn" id="authLink">Đăng nhập</a>
           <a href="cart.html" class="icon-btn cart">
             🛒
             <span>Giỏ hàng</span>
@@ -69,7 +69,7 @@
       <!-- Loading Screen -->
       <div class="logo" id="preloader">
         <div class="loader-icon">
-          <img src="images/logo.jpg" alt="GIBOR Coffee" />
+          <img src="images/logo/logo.jpg" alt="GIBOR Coffee" />
         </div>
         <p
           style="
@@ -172,7 +172,7 @@
               </p>
             </li>
             <li>
-              <img src="images/logoHuit.png" alt="logo-huit" height="60" />
+              <img src="images/logo/logoHuit.png" alt="logo-huit" height="60" />
             </li>
           </ul>
         </div>
@@ -227,6 +227,7 @@
     </footer>
 
     <!-- Phần JS CHUNG -->
+    <script src="js/data.js"></script>
     <script src="js/main.js"></script>
     <!-- JS RIÊNG CHO CART -->
     <script src="js/cart.js"></script>
