--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="header-container">
         <!-- LOGO -->
         <a href="index.html" class="logo">
-          <img src="images/logo.jpg" alt="GIBOR Coffee" />
+          <img src="images/logo/logo.jpg" alt="GIBOR Coffee" />
           <span>GIBOR COFFEE</span>
         </a>
 
@@ -55,7 +55,7 @@
 
         <!-- AUTH + CART -->
         <div class="header-actions">
-          <a href="login.html" class="icon-btn">Đăng nhập</a>
+          <a href="login.html" class="icon-btn" id="authLink">Đăng nhập</a>
           <a href="cart.html" class="icon-btn cart">
             🛒
             <span>Giỏ hàng</span>
@@ -72,7 +72,7 @@
       <!-- Loading Screen -->
       <div class="logo" id="preloader">
         <div class="loader-icon">
-          <img src="images/logo.jpg" alt="GIBOR Coffee" />
+          <img src="images/logo/logo.jpg" alt="GIBOR Coffee" />
         </div>
         <p
           style="
@@ -171,7 +171,7 @@
               </p>
             </li>
             <li>
-              <img src="images/logoHuit.png" alt="logo-huit" height="60" />
+              <img src="/images/logo/logoHuit.png" alt="logo-huit" height="60" />
             </li>
           </ul>
         </div>
@@ -226,6 +226,7 @@
     </footer>
 
     <!-- Phần JS CHUNG -->
+    <script src="js/data.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
