cập nhật giao diện

--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,20 @@
                   placeholder="Bạn muốn nhắn gì cho GIBOR?"
                 ></textarea>
               </div>
-              <button type="submit" class="btn-send">Gửi Lời Nhắn</button>
+
+              <button type="submit" id="btn-gui" class="btn-send">Gửi Lời Nhắn</button>
+
+              <div id="myModal" class="modal">
+                <div class="modal-content">
+                  <h2>Thành công!</h2>
+                  <p>Cảm ơn bạn! GIBOR đã nhận được lời nhắn từ bạn.</p>
+                  
+                  <div class="modal-footer">
+                    <button type="button" class="closeBtn">X Đóng</button>
+                  </div>
+                </div>
+              </div>
+            </div>
             </form>
           </div>
         </div>
